--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "ipykernel>=6.29.5",
-    "numpy>=1.24.2" ,
+    "matplotlib>=3.10.3",
+    "networkx>=3.5",
+    "numpy>=1.24.2",
     "pandas>=2.3.0",
     "scikit-learn>=1.7.0",
     "tqdm>=4.67.1",
