--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "ipykernel>=6.29.5",
+    "langchain-ollama>=0.3.3",
     "matplotlib>=3.10.3",
     "networkx>=3.5",
     "numpy>=1.24.2",
