--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "ipykernel>=6.29.5",
     "langchain-ollama>=0.3.3",
     "matplotlib>=3.10.3",
+    "nbformat>=5.10.4",
     "networkx>=3.5",
     "numpy>=1.24.2",
     "pandas>=2.3.0",
